kubernetes/swagger-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: swagger
  labels:
    app: swagger-ui
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 8080
    protocol: TCP
  selector:
    app: swagger-ui
