kubernetes/swagger-ui/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: swagger-ui
  name: swagger-ui
  namespace: swagger
spec:
  rules:
  - host: swagger.yuha0.com
    http:
      paths:
      - backend:
          serviceName: http
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - swagger.yuha0.com
